--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,22 @@
-# Use an official Python runtime as a parent image
-FROM python:3.10-slim
+FROM python:3.9-slim
 
-# Set the working directory in the container
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install --upgrade pip
+
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
-
-# Install any needed packages specified in requirements.txt
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install gunicorn
 
-# Expose port 5000
-EXPOSE 5000
+COPY . .
 
-# Run the application
-CMD ["python", "app.py"]
+RUN mkdir -p /app/card_imgs
+
+EXPOSE 8000
+
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "wsgi:app"]
