--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,6 +17,15 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
 
+  frontend:
+    build: ../frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ../frontend:/app
+    environment:
+      NODE_ENV: development
+
   web:
     build: .
     ports:
