upd docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     build: ./frontend
     ports:
       - "5173:5173"
-    volumes: 
+    volumes:
       - ./frontend:/app:rw
       - /app/node_modules
     user: "1000:1000"
@@ -50,4 +50,5 @@ services:
 
 volumes:
   postgres_data: {}
+  frontend_node_modules: {}
   card_images: {}
