opyat dokir kampous

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,7 @@ services:
     user: "1000:1000"
     environment:
       NODE_ENV: development
-    command: >
-      sh -c "chown -R node:node /app/node_modules && vite"
+    command: vite
 
   web:
     build: ./backend
