--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     user: "1000:1000"
     environment:
       NODE_ENV: development
-    command: vite
+    command: npm run dev
 
   web:
     build: ./backend
