--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - /app/node_modules
     environment:
       NODE_ENV: development
-    command: tail -f /dev/null
+    command: npm run dev
 
   web:
     build: ./backend
