--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - /app/node_modules
     environment:
       NODE_ENV: development
-    command: npm run dev
+    command: sh -c "chown -R node:node /app/node_modules && npm run dev"
 
   web:
     build: ./backend
