--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: ]7YD8£73vIo(
       POSTGRES_DB: cards  # Главная база данных
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d cards"]
