--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,9 @@ services:
     environment:      
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:postgres@db:5432/cards
       BOT_TOKEN_HASH: 7505659847:AAF3AoBU0HFInjsPPOqz4KaPmX3M15l9f1U
+      SECRET_KEY: VUPSENPUPSENROSTIC)
       FLASK_APP: wsgi:app
-    command: >
+    command: >      
       sh -c "flask --app wsgi db migrate -m 'Initial migration' &&
       flask --app wsgi db upgrade &&
       gunicorn --bind 0.0.0.0:8000 wsgi:app"
