--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend:/app:rw
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
     environment:
       NODE_ENV: development
     command: sh -c "chown -R node:node /app/node_modules && npm run dev"
