--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     volumes:
       - ./frontend:/app:rw
       - frontend_node_modules:/app/node_modules
+      - card_images:/usr/share/nginx/html/user_avatars:ro
     environment:
       NODE_ENV: development
     command: sh -c "chown -R node:node /app/node_modules && npm run dev"
