--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       SECRET_KEY: VUPSENPUPSENROSTIC)
       FLASK_APP: wsgi:app
     command: >      
-      sh -c "flask --app wsgi db migrate -m  &&
+      sh -c "flask --app wsgi db migrate  &&
       flask --app wsgi db upgrade &&
       gunicorn --bind 0.0.0.0:8000 wsgi:app"
 
