--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - ./frontend/public:/app/public
       # - card_images:/app/card_imgs
       - /root/CARDSWOOS/db/offcardswood.db:/app/db/offcardswood.db:ro
-      - /root/CARDSWOOS/photos:app/card_imgs
+      - /root/CARDSWOOS/photos:/app/card_imgs
     depends_on:
       db:
         condition: service_healthy
