--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       SECRET_KEY: VUPSENPUPSENROSTIC)
       FLASK_APP: wsgi:app
     command: >      
-      sh -c "gunicorn --bind 0.0.0.0:8000 wsgi:app"
+      sh -c "gunicorn --bind 0.0.0.0:8000 --worker-class gevent --timeout 120 wsgi:app"
     # flask --app wsgi db init &&
     # flask --app wsgi db migrate  &&
     # flask --app wsgi db upgrade &&
