--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - ./backend:/app
       - ./frontend/public:/app/public
       # - card_images:/app/card_imgs
-      - cardswoos_db:/app/db/offcardswood.db:ro
+      - cardswoos_db:/app/db/
       - cardswoos_photos:/app/card_imgs
     depends_on:
       db:
@@ -63,7 +63,7 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /root/CARDSWOOS/db/offcardswood.db
+      device: /root/CARDSWOOS/db
   cardswoos_photos:
     driver: local
     driver_opts:
