--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,10 @@ services:
       PAYANYWAY_MNT_ID: ${PAYANYWAY_MNT_ID}
       PAYANYWAY_MNT_INTEGRITY_CODE: ${PAYANYWAY_MNT_INTEGRITY_CODE}
       PAYANYWAY_TEST_MODE: ${PAYANYWAY_TEST_MODE}
+      PAYANYWAY_MNT_SUBSCRIBER_ID: ${PAYANYWAY_MNT_SUBSCRIBER_ID:-}
+      PAYANYWAY_MNT_UNIT_ID: ${PAYANYWAY_MNT_UNIT_ID:-}
+      PAYANYWAY_MNT_INLINE_FORM: ${PAYANYWAY_MNT_INLINE_FORM:-}
+      PAYANYWAY_MNT_CMS: ${PAYANYWAY_MNT_CMS:-TaskListCMS}
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:postgres@db:5432/cards
       FLASK_APP: wsgi:app
     command: >      
