--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,59 @@
 .env
 cmsspecification (1).pdf
+Виджет ЮKassa — Прием платежей по API ЮKassa.html
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/developers-widget-process.image.ru.gif
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Виджет ЮKassa — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa.html
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Виджет ЮKassa_ быстрый старт — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa.html
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Виджет ЮKassa_ интеграция — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa.html
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Виджет ЮKassa_ справочник параметров, методов и кодов ошибок — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa.html
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Виджет ЮKassa_ типовые сценарии — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Выбор сценария интеграции — Прием платежей по API ЮKassa.html
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Выбор сценария интеграции — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Процесс платежа — Прием платежей по API ЮKassa.html
+Процесс платежа — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Процесс платежа — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Процесс платежа — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Процесс платежа — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Процесс платежа — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Процесс платежа — Прием платежей по API ЮKassa_files/tag.js.загрузка
+Способы оплаты — Прием платежей по API ЮKassa.html
+Способы оплаты — Прием платежей по API ЮKassa_files/docs-page.7db412ef.js.загрузка
+Способы оплаты — Прием платежей по API ЮKassa_files/docs-page.93aeafe3.css
+Способы оплаты — Прием платежей по API ЮKassa_files/docs-page.ru.8ebfdac8d8a4d1ea8fe968b82b2fb00c.js.загрузка
+Способы оплаты — Прием платежей по API ЮKassa_files/embed.js.загрузка
+Способы оплаты — Прием платежей по API ЮKassa_files/react-with-dom.min.js.загрузка
+Способы оплаты — Прием платежей по API ЮKassa_files/tag.js.загрузка
