--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       PAYANYWAY_MNT_ID: ${PAYANYWAY_MNT_ID}
       PAYANYWAY_MNT_INTEGRITY_CODE: ${PAYANYWAY_MNT_INTEGRITY_CODE}
+      PAYANYWAY_SIGNATURE_VERSION: ${PAYANYWAY_SIGNATURE_VERSION:-v1}
       PAYANYWAY_TEST_MODE: ${PAYANYWAY_TEST_MODE}
       # Пароль БД должен совпадать с POSTGRES_PASSWORD у сервиса db
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:${POSTGRES_PASSWORD:-postgres}@db:5432/cards
