--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       PAYANYWAY_MNT_INTEGRITY_CODE: ${PAYANYWAY_MNT_INTEGRITY_CODE}
       PAYANYWAY_SIGNATURE_VERSION: ${PAYANYWAY_SIGNATURE_VERSION:-v1}
       PAYANYWAY_TEST_MODE: ${PAYANYWAY_TEST_MODE}
+      PAYANYWAY_CHECK_URL: ${PAYANYWAY_CHECK_URL:-}
       # Пароль БД должен совпадать с POSTGRES_PASSWORD у сервиса db
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:${POSTGRES_PASSWORD:-postgres}@db:5432/cards
       FLASK_APP: wsgi:app
