--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,26 @@
+# ASGI app
+quart[default]
+hypercorn
+
+# DB: async
+sqlalchemy[asyncio]>=2.0
+asyncpg
+aiosqlite
+
+# DB: sync (migrations only)
+psycopg2-binary
+
+# Auth / utils
+joserfc
+python-dotenv
+uuid
+
+# HTTP client (async)
+httpx
+
+# Legacy (migrations script still uses Flask)
 flask
 flask_migrate
-joserfc
 flask_sqlalchemy
-uuid
-flask_cors
-datetime
-psycopg2-binary
-requests
-python-dotenv
+
+aiogram>=3.0,<4.0
