--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     environment:
       PAYANYWAY_DEBUG_SIGNATURE: "1"
       BOT_TOKEN: ${BOT_TOKEN}
+      CW_BOT_TOKEN: ${CW_BOT_TOKEN}
       SECRET_KEY: ${SECRET_KEY}
       PAYANYWAY_MNT_ID: ${PAYANYWAY_MNT_ID}
       PAYANYWAY_MNT_INTEGRITY_CODE: ${PAYANYWAY_MNT_INTEGRITY_CODE}
