--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       PAYANYWAY_SIGNATURE_VERSION: ${PAYANYWAY_SIGNATURE_VERSION:-v1}
       PAYANYWAY_TEST_MODE: ${PAYANYWAY_TEST_MODE}
       PAYANYWAY_CHECK_URL: ${PAYANYWAY_CHECK_URL:-}
+      BOT_PURCHASE_NOTIFY_URL: ${BOT_PURCHASE_NOTIFY_URL:-}
       # Пароль БД должен совпадать с POSTGRES_PASSWORD у сервиса db
       SQLALCHEMY_DATABASE_URI: postgresql+psycopg2://postgres:${POSTGRES_PASSWORD:-postgres}@db:5432/cards
     command: ["sh", "/app/entrypoint.sh"]
